Try to fix font render on iOS, correct index of team duplicate

--- a/src/assets/scss/03_organism/_team.scss
+++ b/src/assets/scss/03_organism/_team.scss
@@ -50,6 +50,10 @@
                 }
             }
 
+            p {
+                -webkit-font-smoothing: subpixel-antialiased;
+            }
+
             @include breakpoints("tablet") {
                 left: 14%;
                 max-width: none;
